[workspace]
resolver = "2"
members = ["client", "server", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tokio-tungstenite = "0.26"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
