[package]
name = "client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
bevy = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
