[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
bevy = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
tower-http = { workspace = true }
