[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
rand = "0.10.0"
